--- a/style.css
+++ b/style.css
@@ -1030,10 +1030,36 @@ h2 {
   }
 }
 
+.plat_continuer {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  text-align: left;
+  margin-right: 3rem;
+}
+@media screen and (max-width: 1024px) {
+  .plat_continuer {
+    font-size: 1.6rem;
+    font-family: "titilliumitalic";
+    padding-top: 2rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .plat_continuer {
+    font-size: 1.2rem;
+  }
+}
 @media screen and (max-width: 350px) {
   .plat_continuer {
     font-size: 1.2rem;
-    margin: 0;
+    width: 80%;
+    line-height: 6rem;
+  }
+}
+@media screen and (max-width: 300px) {
+  .plat_continuer {
+    line-height: 4rem;
   }
 }
 
@@ -1107,7 +1133,45 @@ h2 {
     font-size: 1.2rem;
     margin: 0;
     width: 85%;
+    line-height: 5rem;
+  }
+}
+@media screen and (max-width: 300px) {
+  .plat_esquisse {
     line-height: 4rem;
+  }
+}
+
+.prix_esquisse {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+}
+@media screen and (max-width: 1024px) {
+  .prix_esquisse {
+    margin-left: 2rem;
+    font-family: "titilliumitalic";
+    font-weight: bold;
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .prix_esquisse {
+    margin-left: 0.5rem;
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .prix_esquisse {
+    margin-left: 0.1rem;
+    line-height: 5rem;
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 300px) {
+  .prix_esquisse {
+    line-height: 6.5rem;
   }
 }
 
@@ -1165,7 +1229,40 @@ h2 {
     font-size: 1.2rem;
     margin: 0;
     width: 85%;
-    line-height: 3rem;
+    line-height: 5rem;
+  }
+}
+@media screen and (max-width: 300px) {
+  .plat_art {
+    line-height: 3.5rem;
+  }
+}
+
+.prix_art {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+}
+@media screen and (max-width: 1024px) {
+  .prix_art {
+    margin-left: 2rem;
+    font-family: "titilliumitalic";
+    font-weight: bold;
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .prix_art {
+    margin-left: 0.5rem;
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .prix_art {
+    margin-left: 0.1rem;
+    line-height: 7rem;
+    font-size: 1.2rem;
   }
 }
 
